k8s/cluster/deploy-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-deployment
  namespace: stage
  labels:
    app: k8s-nginx
spec:
#  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      project: my-nginx
  template:
    metadata:
      labels:
        project: my-nginx
    spec:
      containers:
        - name: nginx
          image: cubuntu/apache2:2.4-20.04_beta
          imagePullPolicy: Always
#          readinessProbe:
#            httpGet:
#              path: /api/health-check
#              port: 80
#            initialDelaySeconds: 60
#            timeoutSeconds: 5
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "500Mi"
              cpu: "1"
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: k8s-service
  namespace: stage
  labels:
    env: stg
spec:
#  type: NodePort
  selector:
    project: my-nginx
  ports:
    - name: app-listener
      protocol: TCP
      port: 80
      targetPort: 80
#      nodePort: 30080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: stage
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/server-snippet: |
        add_header Strict-Transport-Security "max-age=31536000" always;
        add_header Content-Security-Policy upgrade-insecure-requests;

spec:
  tls:
    - hosts:
      - hostname.com
      secretName: letsencrypt
  rules:
    - host: hostname.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: k8s-service
              port:
                number: 80
